# dcsgonefirm

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/frotz/: CMakeLists.txt  basename.c  defs.h  hash.h
components/frotz/esp/: dfrotz.h  dinit.c  dinput.c  dpic.c
components/frotz/frotz/src/dumb/: dinput.c
main/: CMakeLists.txt  idf_component.yml  main.c  ta_parser.c  ta_parser.h
main/modules/creator_detector/: creator_detector.c  creator_detector.h
main/modules/display/: display.c  display.h  m_powered_320x240.h
main/modules/lasertag/: ir_openlasir_encoder.c  ir_openlasir_encoder.h  lasertag.h  lasertag_main.c  openlasir_utils.h  sync_string_obf.c  sync_string_obf.h
main/modules/libneon_led_controller/: libneon_led_controller.cpp  libneon_led_controller.h
main/modules/ota_updater/: ota_updater.c  ota_updater.h
main/modules/tvbgone/: tvbgone_badge.c  tvbgone_badge.h
main/modules/wifi_manager/: wifi_manager.c  wifi_manager.h
